# ai-leetcode-coach

./: .env.example  .gitignore  AGENTS.md  CODEX_START_PROMPT.md  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260721_0001_initial_learning_records.py  20260723_0002_study_plans.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: coach.py  learning.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/llm/: errors.py  factory.py  provider.py  types.py
backend/app/llm/prompts/: __init__.py  coach.py
backend/app/llm/providers/: deepseek.py
backend/app/models/: __init__.py  attempt.py  problem_reference.py  review_schedule.py  study_plan.py  user.py
backend/app/repositories/: learning_repository.py
backend/app/schemas/: coach.py  learning.py
backend/app/services/: coach_echo_service.py  coach_explanation_service.py  learning_record_service.py  python_code_analysis_service.py  review_service.py  study_plan_service.py
backend/app/web/: app.js  index.html  styles.css
backend/scripts/: __init__.py  smoke_deepseek.py
backend/tests/: test_coach_echo.py  test_coach_explain.py  test_coach_explanation_service.py  test_coach_prompts.py  test_deepseek_provider.py  test_health.py  test_learning_record_service.py  test_learning_routes.py  test_python_code_analysis_service.py  test_review_service.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  ORIGINAL_PROJECT_ANALYSIS.md  PRODUCT_SPEC.md  (+3 more)
(+7 files in other folders)
